# openi-core

./: .gitignore  README.md  arch.mmd  architech.mmd  org chart.mmd
openi-core/: .gitignore  Cargo.toml  Makefile  README.md
openi-core/crates/core-cli/: Cargo.toml
openi-core/crates/core-cli/src/: main.rs
openi-core/crates/core-fabric/: Cargo.toml
openi-core/crates/core-fabric/src/: bus.rs  content.rs  envelope.rs  lib.rs  signing.rs
openi-core/crates/core-kernel/: Cargo.toml
openi-core/crates/core-kernel/src/: identity.rs  lib.rs  policy.rs  runtime.rs
openi-core/crates/core-reflex/: Cargo.toml
openi-core/crates/core-reflex/src/: lib.rs  mod.rs  monitor.rs  supervisor.rs
openi-core/manifests/DevOpsAgentClass/Blueprint/: DevOpsDeployment.yaml
openi-core/manifests/examples/DatabaseAgentClass/Anonymizer/: AgentManifest.yaml
openi-core/manifests/examples/DatabaseAgentClass/AuditLogger/: AgentManifest.yaml
openi-core/manifests/examples/DatabaseAgentClass/Blueprint/: AgentBlueprint.yaml  DatabaseDeployment.yaml
openi-core/manifests/examples/DatabaseAgentClass/DataValidator/: AgentManifest.yaml
openi-core/manifests/examples/DatabaseAgentClass/ETLTransformer/: AgentManifest.yaml
openi-core/manifests/examples/DatabaseAgentClass/SchemaMigrator/: AgentManifest.yaml
openi-core/manifests/examples/DatabaseAgentClass/Tokenizer/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/Blueprint/: AgentBlueprint.yaml
openi-core/manifests/examples/DevOpsAgentClass/CICDPipeline/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/ChaosEngineer/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/ComplianceGate/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/IncidentResponder/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/InfraProvisioner/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/LogAggregator/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/MonitoringAgent/: AgentManifest.yaml
openi-core/manifests/examples/DevOpsAgentClass/SecretsRotator/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/: HealthcareDeployment.yaml  RCM-RemittanceAgent.yaml
openi-core/manifests/examples/HealthcareAgentClass/Admin/: AdminDeployment.yaml  Administration-SchedulingAgent.yaml
openi-core/manifests/examples/HealthcareAgentClass/Admin/admin-capacity/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Admin/admin-credentialing/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Admin/admin-payroll/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Admin/admin-staffing/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/: AnalyticsDeployment.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/operational-analytics/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/pharmacy-analytics/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/population-health/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/predictive-agent/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Analytics/rcm-analytics/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Blueprint/: AgentBlueprint.yaml  MasterBlueprint.yaml
openi-core/manifests/examples/HealthcareAgentClass/Compliance/: ComplianceDeployment.yaml
openi-core/manifests/examples/HealthcareAgentClass/Compliance/audit-agent/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/EMR/: EMR-OrdersAgent.yaml  EMRDeployment.yaml
openi-core/manifests/examples/HealthcareAgentClass/EMR/emr-discharge/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/EMR/emr-labs/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/EMR/emr-notes/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/EMR/emr-scheduling/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/Gateways/: GatewayDeployment.yaml
openi-core/manifests/examples/HealthcareAgentClass/Gateways/fhir-gateway-agent/: AgentManifest.yaml
openi-core/manifests/examples/HealthcareAgentClass/LabImaging/: LabImagingDeployment.yaml
openi-core/manifests/examples/HealthcareAgentClass/Pharmacy/: Pharmacy-Deployment.yaml  Pharmacy-MedicationAgent.yaml
openi-core/manifests/examples/HealthcareAgentClass/RCM/: rcmdeployment.yaml
openi-core/manifests/examples/schema-mapper/: AgentManifest.yaml
openi-core/rfcs/: rfc-0001-agent-manifest.md  rfc-0002-envelope-and-transport.md
openi-core/sdk/rust/openi-core-sdk/: Cargo.toml
openi-core/sdk/rust/openi-core-sdk/src/: lib.rs
(+16 files in other folders)
