[workspace]
resolver = "2"
members = [
  "crates/core-fabric",
  "crates/core-kernel",
  "crates/core-cli",
  "crates/core-reflex",
  "sdk/rust/openi-core-sdk",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Synergy Technologies <eng@synergytech.ai>"]
repository = "https://github.com/synergy-tech/openi-core"
