[package]
name = "openi-core-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenI CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
openi-core-fabric = { path = "../core-fabric" }
openi-core-kernel = { path = "../core-kernel" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
