[package]
name = "openi-core-reflex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Autonomic Reflex Layer for OpenI-Core: always-on safety/health monitors that can alert or halt."

[features]
# When enabled, we use your real Envelope/Bus types from openi-core-fabric
openi-core-fabric = ["dep:openi-core-fabric"]

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rand = "0.9.2"
anyhow = "1"
# Optional integration with your fabric. Path matches workspace structure.
openi-core-fabric = { path = "../core-fabric", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
